CHANGES IN VERSION 1.5.0-1.5.3
-------------------------

NEW FEATURES

    o adjust for Xcode 6.3.1

    o LZ4 library is updated to r130

    o a new argument 'include.hidden' is added to the functions `cnt.gdsn()`
      and `ls.gdsn()`

    o define `GDS_MAX_NUM_DIMENSION` in R_GDS.h


SIGNIFICANT USER-VISIBLE CHANGES

    o increase test coverage

BUG FIXES

    o v1.5.1: bug fix https://github.com/zhengxwen/gdsfmt/issues/9


CHANGES IN VERSION 1.4.0
-------------------------

    o The version number was bumped for the Bioconductor release version


CHANGES IN VERSION 1.3.0-1.3.11
-------------------------

NEW FEATURES

    o a new argument 'visible' is added to the functions `add.gdsn()`,
      `addfile.gdsn()` and `addfolder.gdsn()`

    o `objdesp.gdsn()` returns 'encoder' to indicate the compression algorithm

    o add a new function `system.gds()` showing system configuration

    o support efficient random access of zlib compressed data,
      which are composed of independent compressed blocks

    o support LZ4 compression format (http://code.google.com/p/lz4/),
      based on "lz4frame API" of r128

    o allow R RAW data (interpreted as 8-bit signed integer) to replace
      32-bit integer with `read.gdsn()`, `readex.gdsn()`, `apply.gdsn()`,
      `clusterApply.gdsn()`, `write.gdsn()`, `append.gdsn()`

    o a new argument 'target.node' is added to `apply.gdsn()`, which allows
      appending data to a target GDS variable

    o `apply.gdsn()`, `clusterApply.gdsn()`: the argument 'as.is' allows
      "logical" and "raw"

    o more argument checking in `write.gdsn()`

    o new components 'trait' and 'param' in the return value of `objdesp.gdsn()`

    o add new data types: packedreal8, packedreal16, packedreal32

    o a new argument 'permute' in the function `setdim.gdsn()`

SIGNIFICANT USER-VISIBLE CHANGES

    o v1.3.5: add a R Markdown vignette

BUG FIXES

    o minor fixes

    o v1.3.2: fixes https://github.com/zhengxwen/gdsfmt/issues/7
