@@ -1187,8 +1187,8 @@ static const ssize_t LZ4ChunkSize[4] =
 	{ 64*1024, 256*1024, 1*1024*1024, 4*1024*1024 };
 static const int LZ4DeflateLevel[4] =
 	{ 0, 2, 8, 16 };
-static const blockSizeID_t LZ4FrameInfoBlockSize[4] =
-	{ max64KB, max256KB, max1MB, max4MB };
+static const LZ4F_blockSizeID_t LZ4FrameInfoBlockSize[4] =
+	{ LZ4F_max64KB, LZ4F_max256KB, LZ4F_max1MB, LZ4F_max4MB };
 
 static const char *ErrLZ4DeflateInvalid =
 	"Invalid LZ4 Deflate Stream operation '%s'!";
